--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: Calendar
-description: Manage your schedule
-theme: jekyll-theme-minimal
+description: Manage your schedule with this intuitive calendar application.
+theme: jekyll-theme-cayman
