--- a/package.json
+++ b/package.json
@@ -40,7 +40,26 @@
       "Reminders",
       "Multiple calendars",
       "Sync support"
-    ]
+    ],
+    "screenshots": {
+      "hero": "screenshots/hero.png",
+      "images": [
+        "screenshots/1-main.png",
+        "screenshots/2-feature.png"
+      ]
+    },
+    "downloads": {
+      "web": "https://zos-apps.github.io/calendar"
+    },
+    "featured": true,
+    "tags": [
+      "productivity",
+      "work",
+      "calendar"
+    ],
+    "releaseDate": "2024-12-28",
+    "support": "https://github.com/zos-apps/calendar/issues",
+    "changelog": "https://github.com/zos-apps/calendar/releases"
   },
   "scripts": {
     "build": "tsup",
